--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "better-sqlite3": "^7.5.3",
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "i": "^0.3.7"
   }
 }
